# paulos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  linker.ld
CMake/: toolchain-i686-elf.cmake
grub_image/boot/grub/: grub.cfg
grub_image/boot/grub/i386-pc/: eltorito.img  modinfo.sh
src/: Foo.cpp  Foo.hpp  VGA.cpp  VGA.hpp  array.hpp  boot.s  compile_checks.hpp  cpp_support.cpp  crti.s  crtn.s  hex.cpp  hex.hpp  kernel.cpp  stack.cpp  stack.hpp
